# ev-battery-supplychain

./: .gitignore  CANONICAL_SIGNING_IMPLEMENTATION.md  CANONICAL_SIGNING_UI_TEST_CHECKLIST.md  COMMITMENT_BINDING_FLOW_ANALYSIS.md  COMMITMENT_FREEZING_IMPLEMENTATION.md  COMMITMENT_STORAGE_FIX_GUIDE.md  CONCRETE_SOLUTION_2540_COMMITMENTS.md  CONFIGURATION_REFERENCE.md  Cargo.toml  DEFINITIVE_POI_ANALYSIS.md  FINAL_DEFINITIVE_ANALYSIS.md  PHASE1B_IMPLEMENTATION.md  POI_FLOW_ANALYSIS.md  PRIVATE_PAYMENT_ARCHITECTURE.md  PROOF_BINDING_ANALYSIS.md  ProductFactory_flat.sol  README.md  RUN_FRONTEND_DOCKER.md  SDK_FUNCTION_DETAILED_ANALYSIS.md  TEST_RESULTS.md  diagrams_preview.html  docker-compose.yml  flow1.md  package-lock.json  package.json  probe-txid-config.mjs  start-demo.ps1  start-demo.sh  stop-demo.ps1  stop-demo.sh  test-gas-estimate-shield.js  test-txidversion.js  truffle-config.js
.claude/: settings.local.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
backend/: .env.railgun.template
contracts/: Escrow.sol  Migrations.sol  ProductEscrow.sol  ProductEscrow_Initializer.sol  ProductEscrow_Test.sol  ProductFactory.sol  SC_System.txt  SmartContract-Design-and-Testing.md
docs/: debugging-workflow.md  implementation-status.md  phase12-buyer-attestation.md  railgun-audit-operations.md  zkp-privacy-summary.md  zkp-vc-architecture.md
frontend/: .env  .env.example  .env.ganache.backup  .env.ganache.example  .env.sepolia.example  .gitignore  BALANCE_FUNCTIONS_REFERENCE.md  (+54 more)
zkp-backend/zkp-wasm/: Cargo.toml  README.md
zkp-backend/zkp-wasm/src/: lib.rs
(+464 files in other folders)
