[package]
name = "zkp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bulletproofs = { version = "4.0.0", default-features = false, features = ["yoloproofs", "std"] }
curve25519-dalek-ng = "4.1.1"
hex = "0.4.3"
merlin = "3"
num-bigint = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
clear_on_drop = { version = "0.2.5", default-features = false, features = ["no_cc"] }
